--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -13,3 +13,5 @@ Specifically,
 
 [rmarkdown]: http://rmarkdown.rstudio.com/rmarkdown_websites.htm
 [rstudio]: https://www.rstudio.com/products/rstudio/download/preview/
+
+Click on this [file:///Users/brianamittleman/Documents/chicago1%20/Stephens%20Lab/cell-cycle/analysis/recreate_cell_cycle_analysis.html](first-analysis.html) to see my results.
