testing changes to mrkdwn

--- a/analysis/recreate_cell_cycle_analysis.Rmd
+++ b/analysis/recreate_cell_cycle_analysis.Rmd
@@ -17,3 +17,4 @@ knitr::read_chunk("chunks.R")
 **Code version:** `r workflowr::extract_commit(".", 1)$sha1`
 
 **THIS IS A TEST**
+I want this to commit to the website
