compile ERCC sites with mouse reference

--- a/analysis/recreate_cell_cycle_analysis.Rmd
+++ b/analysis/recreate_cell_cycle_analysis.Rmd
@@ -71,8 +71,24 @@ sinteractive --mem=8g
 
 The files from the assembly are in /home/brimittleman/software/share/mouseref. 
 
-**NEED TO FIND ERCC SEQUENCES TO MAP TO AS WELL**
+Download ERCC sequences to add to map.  
 see : https://github.com/jdblischak/singleCellSeq/blob/2f6371b256829bfa799270909b6eea2814acf2a1/code/create-genome.sh
+
+```
+wget http://tools.thermofisher.com/downloads/ERCC92.fa
+
+```
+
+Combine the mouse reference and ERCC sequences and rebuild the genome. Need to unzip the mouse fastq files so I can run the build fucntion with the ERCC and the mouse files. Perform these commands in the mouse ref directory where the files are held.  
+
+```
+gunzip *dna.chrom*fa.gz
+```
+In the software file I can now rerun the build with this command in the software/bin directory.
+```
+ ./gmap_build -d mouseref_ERCC  ../../mouse\ genome/*.fa 
+```
+
 
 #### Running GSNAP:  
 
@@ -86,5 +102,5 @@ Files: **ERR489047_2.fastq.gz**
 Code I am working on for this allignment. Not correct yet. 
 
 ```
-./gsnap --gunzip -d -D  ../share/mouseref ../../scratch-midway/ERR489047_1.fastq.gz ../../scratch-midway/ERR489047_2.fastq.gz
+./gsnap --gunzip -d -D  ../share/mouseref_ERCC ../../scratch-midway/ERR489047_1.fastq.gz ../../scratch-midway/ERR489047_2.fastq.gz
 ```
