--- a/analysis/recreate_giladsinglecell.Rmd
+++ b/analysis/recreate_giladsinglecell.Rmd
@@ -39,11 +39,13 @@ First I need to document the programs I will need to add to midway to complete t
 
 - umitools v2.1.1
 -fastqc **on midway- not told you need it in github commands!**
-- sickle version 1.33
+
+- sickle version 1.33 **used make function**
 - Subread version 1.5.0-p1 **on midway**
 - samtools version 0.1.18-dev (r982:313) **version 1.2 on midway**
 - UMI-tools (version e0ade5d)
 - featureCounts version 1.5.0-p1 **i think this is a part of subread**
+
 
 To use modules on midway:
 ```
@@ -127,7 +129,9 @@ Load the fastqc package and submit the job to the cluster:
 ```
 sbatch --mem=8g run-fastqc.sh ../19098.1/*fastq.gz
 ```
-This only runs the fastqc for the first file. Need to learn how to wrap the code for each fastq file. 
+
+Run this command for each fastq. 
+
 
 
 
