--- a/analysis/recreate_giladsinglecell.Rmd
+++ b/analysis/recreate_giladsinglecell.Rmd
@@ -208,8 +208,9 @@ I will use the process-bam.sh script to process the bam files. I will create a n
 I am reorganizing my data and code according to John's organization. I created a single cell directory in my home directory and in my project/gilad directory. I keep all of the scripts I have created in a code directory within the home single cell directory and edit my path variable to include this. The file containing my path directort in called .bashrc and is in the home directory. The fastq files were moved to a fastq directory within the single cell directory in the project folder. This way I am now keeping scripts in my home folder and have all large data in my project folder. I run jobs from the single cell directory in my project/gilad folder.  
 
 
-Umitools seems to still not work
-- line 26: umitools: command not found
+trim.sh fastq/19098.1.F12.AACCCATG.L006.R1.C723YACXX.fastq.gz
+
+need to update the trim.sh script for the umi_tools extract command.  
 
 
 
