--- a/analysis/recreate_giladsinglecell.Rmd
+++ b/analysis/recreate_giladsinglecell.Rmd
@@ -125,7 +125,7 @@ chmod 700 run-fastqc.sh #make file executable
 ```
 Load the fastqc package and submit the job to the cluster: 
 ```
-sbatch --mem=2g run-fastqc.sh ../19098.1/19098.1.A09.GGTATTCA.L003.R1.C6WURACXX.fastq.gz #Run this command for each fastq. 
+sbatch --mem=2g run-fastqc.sh ../19098.1/19098.1.A09.GGTATTCA.L003.R1.C6WURACXX.fastq.gz #Run this command for eachfastq. 
 ```
 
 **Each new Session: load fastqc, subread, samtools. **  
@@ -208,9 +208,22 @@ I will use the process-bam.sh script to process the bam files. I will create a n
 I am reorganizing my data and code according to John's organization. I created a single cell directory in my home directory and in my project/gilad directory. I keep all of the scripts I have created in a code directory within the home single cell directory and edit my path variable to include this. The file containing my path directort in called .bashrc and is in the home directory. The fastq files were moved to a fastq directory within the single cell directory in the project folder. This way I am now keeping scripts in my home folder and have all large data in my project folder. I run jobs from the single cell directory in my project/gilad folder.  
 
 
-trim.sh fastq/19098.1.F12.AACCCATG.L006.R1.C723YACXX.fastq.gz
+-I need to update the trim.sh script for the umi_tools extract command.  
 
-need to update the trim.sh script for the umi_tools extract command.  
 
+ The code below works but it puts the output in the directory I ran the script in instead of the trim folder. Going to wrap it for all the files anyway:
+ ```
+ umi_tools extract --stdin=$FILE  --bc-pattern=[NNNNNGGG]  -L extract.log --stdout=$BASE.trim.fastq.gz \
+  -E $INVALID_DIR/$BASE.invalid.fastq \
+  2> $INVALID_DIR/$BASE.trim.stats.txt | gzip -c > $OUTDIR/$BASE.trim.fastq.gz
+```
+
+I added code to increase memory and run the code in the mstephens partition to the wrap_trim.sh script and ran it on all of the fastq files using the following code in the project single cell directory. 
+
+```
+wrap_trim.sh fastq/*fastq.gz
+```
+
+Only works when I run this in the fastq directory. The output files have *.trim.fastq.gz. I will move these to the trim directory and more the trim directory out of the fastq directory.  
 
 
